--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.3",
+    "@ngrx/store": "^17.2.0",
     "express": "^4.18.2",
     "json-server": "^1.0.0-alpha.23",
     "ngx-cookie-service": "^17.1.0",
