--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,7 @@
             ],
             "scripts": [],
             "server": "src/main.server.ts",
-            "prerender": true,
+            "prerender": false,
             "ssr": false
           },
           "configurations": {
