--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.3",
     "@ngrx/store": "^17.2.0",
+    "ag-grid-angular": "^31.3.2",
+    "ag-grid-community": "^31.3.2",
     "express": "^4.18.2",
     "json-server": "^1.0.0-alpha.23",
     "ngx-cookie-service": "^17.1.0",
